--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "preview:mancala": "vite preview --config mancala/vite.config.ts",
     "dev:othello": "vite --config othello/vite.config.ts",
     "build:othello": "tsc && vite build --config othello/vite.config.ts",
-    "preview:othello": "vite preview --config othello/vite.config.ts"
+    "preview:othello": "vite preview --config othello/vite.config.ts",
+    "dev:chess": "vite --config chess/vite.config.ts",
+    "build:chess": "tsc && vite build --config chess/vite.config.ts",
+    "preview:chess": "vite preview --config chess/vite.config.ts"
   },
   "devDependencies": {
     "typescript": "~5.9.3",
